--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <!-- Header Section -->
     <table border="1" width="100%" cellpadding="5" cellspacing="0">
         <tr>
-            <td rowspan="5" width="100">
+            <!-- <td rowspan="5" width="100">
                 <img src="" alt="UNIUYO Logo" width="100" height="100">
-            </td>
+            </td> -->
             <td colspan="3" align="center">
                 <h3>OFFICE OF THE REGISTRAR</h3>
                 <h1>UNIVERSITY OF UYO</h1>
@@ -20,11 +20,8 @@
                 <small>Website: <a href="www.uniuyo.edu.ng">www.uniuyo.edu.ng</a> | Email: <a href="mailto:vc@uniuyo.edu.ng">vc@uniuyo.edu.ng</a> | Mobile: +234(0)-7017174407</small>
             </td>
         </tr>
-    </table>
     <br>
-
     <!-- Student Info Section -->
-    <table border="1" cellpadding="5" cellspacing="0" width="100%">
         <tr>
             <td colspan="3"><strong>STUDENT'S INFORMATION</strong></td>
             <td rowspan="6">
@@ -96,7 +93,7 @@
         <tr>
             <td>1</td>
             <td>COS121</td>
-            <td>Introduction To Computing Sciences</td>
+            <td>Problem Solving</td>
             <td>3</td>
             <td>C</td>
             <td></td>
@@ -104,7 +101,7 @@
         <tr>
             <td>2</td>
             <td>GST121</td>
-            <td>Introduction To Computer Programming</td>
+            <td>Nigerian Peoples and Culture</td>
             <td>3</td>
             <td>C</td>
             <td></td>
@@ -112,7 +109,7 @@
         <tr>
             <td>3</td>
             <td>MTH121</td>
-            <td>Introduction To Computer Hardware</td>
+            <td>General Mathematics II</td>
             <td>2</td>
             <td>C</td>
             <td></td>
@@ -120,7 +117,7 @@
         <tr>
             <td>4</td>
             <td>PHY121</td>
-            <td>Introduction To Computer Networks</td>
+            <td>General Physics II</td>
             <td>2</td>
             <td>C</td>
             <td></td>
@@ -128,15 +125,15 @@
         <tr>
             <td>5</td>
             <td>PHY128</td>
-            <td>Introduction To Database Systems</td>
-            <td>3</td>
+            <td>General Physics Practical II</td>
+            <td>1</td>
             <td>C</td>
             <td></td>
         </tr>
         <tr>
             <td>6</td>
             <td>UUY-CSC121</td>
-            <td>Introduction To Software Engineering</td>
+            <td>Introduction To Web Programming</td>
             <td>2</td>
             <td>C</td>
             <td></td>
@@ -144,7 +141,7 @@
         <tr>
             <td>7</td>
             <td>UUY-CSC122</td>
-            <td>Introduction To Web Development</td>
+            <td>Introduction To Information And Communications Technology</td>
             <td>2</td>
             <td>C</td>
             <td></td>
