--- a/index.html
+++ b/index.html
@@ -41,11 +41,11 @@
         </tr>
         <tr>
             <td><strong>Matric Number:</strong></td>
-            <td colspan="2">24/SC/CO/575</td>
+            <td colspan="2">24/SC/CO/310</td>
         </tr>
         <tr>
             <td><strong>Full Name:</strong></td>
-            <td colspan="2">LAWRENCE, Praise Aniekan</td>
+            <td colspan="2">Essien, Deborah Eshiet</td>
         </tr>
         <tr>
             <td><strong>Faculty:</strong></td>
