--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     </tr>
                     <tr>
                         <td><strong>Gender:</strong></td>
-                        <td>Male</td>
+                        <td>Female</td>
                     </tr>
                 </table>
             </td>
