--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
                     </tr>
                     <tr>
                         <td><strong>Gender:</strong></td>
-                        <td>Female</td>
+                        <td>Male</td>
                     </tr>
                 </table>
             </td>
         </tr>
         <tr>
             <td><strong>Matric Number:</strong></td>
-            <td colspan="2">24/SC/CO/310</td>
+            <td colspan="2">24/SC/CO/186</td>
         </tr>
         <tr>
             <td><strong>Full Name:</strong></td>
-            <td colspan="2">Essien, Deborah Eshiet</td>
+            <td colspan="2">Daniel Ndubuisi-Nnaji Kelechi/td>
         </tr>
         <tr>
             <td><strong>Faculty:</strong></td>
