--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                         <td><img src="qr-code.png" alt="QR Code" width="100" height="100"></td>
                     </tr>
                     <tr>
-                        <td><img src="Debbie.jpg" alt="Student Passport Photo" width="100" height="100"></td>
+                        <td><img src="Daniel.jpg" alt="Student Passport Photo" width="100" height="100"></td>
                     </tr>
                     <tr>
                         <td><strong>Gender:</strong></td>
