--- a/index.html
+++ b/index.html
@@ -3,177 +3,191 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSC121 Assignment - 26/06/2025</title>
+    <title>Course Registration</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-    <!-- Header Section -->
-    <table border="1" width="100%" cellpadding="5" cellspacing="0">
+    <table border="1">
         <tr>
-            <!-- <td rowspan="5" width="100">
-                <img src="" alt="UNIUYO Logo" width="100" height="100">
-            </td> -->
-            <td colspan="3" align="center">
-                <h3>OFFICE OF THE REGISTRAR</h3>
-                <h1>UNIVERSITY OF UYO</h1>
-                <p>P.M.B 1017, UYO, AKWA IBOM STATE, NIGERIA</p>
-                <small>Website: <a href="www.uniuyo.edu.ng">www.uniuyo.edu.ng</a> | Email: <a href="mailto:vc@uniuyo.edu.ng">vc@uniuyo.edu.ng</a> | Mobile: +234(0)-7017174407</small>
-            </td>
+             <td class="fs-5">
+                <header>
+                    <img src="./download.jpeg", alt="uniuyo logo", width="20%", height="10%",  class="fs-1">
+                    <div class="fs-2">
+                        <h3><strong><u>OFFICE OF THE REGISTRAR</u></strong><h3>
+                        <h1 class="header"><strong>UNIVERSITY OF UYO</strong></h1>
+                        <h4><strong>P.M.B 1017, UYO, AKWA IBOM STATE,NIGERIA</strong></h4>
+                        <p>Website: www.uniuyo.edu.ng | Email:vc@uniuyo.edu.ng, registrar@uniuyo.edu.ng | Mobile: +234(0)-701774707</p>
+                    </div>
+                </header>
+             </td> 
+             <td rowspan="2">
+               <table border="1">
+                  <tr>
+                     <td>
+                        <img src="./jjj.png", alt="QR code",  width="120px", height="120px">
+                     </td>
+                  </tr>
+                  <tr>
+                    <td>
+                        <img src="./sand.jpg", alt="picture of person", width="120px", height="120px class="fs-3">
+                    </td>
+                  </tr>
+                  <tr>
+                    <td>
+                     <table border="1">
+                        <tr>
+                            <th><strong>Gender:</strong>Male</th>
+                        </tr>
+                        <tr>
+                            <td><strong>Session:</strong>2024/2025</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Level:</strong>100l</td>
+                        </tr>
+                        <tr>
+                            <td><strong>Date:</strong>10-jun-2025</td>
+                        </tr>
+                     </table>   
+                    </td>
+                  </tr>  
+               </table>
+             </td>     
         </tr>
-    <br>
-    <!-- Student Info Section -->
-        <tr>
-            <td colspan="3"><strong>STUDENT'S INFORMATION</strong></td>
-            <td rowspan="6">
-                <table border="1" >
+        <tr style="width: 80%;">
+            <td>
+                <table border="1" class="fs-4">
                     <tr>
-                        <td><img src="qr-code.png" alt="QR Code" width="100" height="100"></td>
+                        <th colspan="2">STUDENT'S INFORMATION DETAILS</th>
                     </tr>
                     <tr>
-                        <td><img src="Debbie.jpg" alt="Student Passport Photo" width="100" height="100"></td>
+                        <td><strong>RegNo:</strong></td>
+                        <td><strong>24/SC/CO/703</strong></td>
                     </tr>
                     <tr>
-                        <td><strong>Gender:</strong></td>
-                        <td>Female</td>
+                        <td><strong>FullName:</strong></td>
+                        <td><strong>Peters, Godswill Sylvester </strong></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Dept/Faculty:</strong></td>
+                        <td>Computer Science/<strong>Computing</strong></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Programme:</strong></td>
+                        <td><strong>B.Sc Computer Science</strong></td>
+                    </tr>
+                    <tr>
+                        <td><strong>ProgType:</strong></td>
+                        <td>UTME/Undergraduate/<strong>Full-Time</strong></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Phone Number:</strong></td>
+                        <td><strong>08151956330</strong></td>
+                    </tr>
+                    <tr>
+                        <td><strong>Semester:</strong></td>
+                        <td><strong>Second Semester</strong></td>
                     </tr>
                 </table>
             </td>
+        </tr> 
+    </table>
+    <h4 class="head"><strong> SECOND SEMESTER, 2024/2025 SESSION e-COURSE REGISTRATION FORM (CRF) </strong></h4>
+    <section class="second section">
+        <table border="1">
+            <tr>
+                <th>#</th>
+                <th>CourseCode</th>
+                <th>CourseTitle</th>
+                <th>CH</th>
+                <th>Descr</th>
+                <th>Remarks</th>
+            </tr>
+            <tr>
+                <td>1</td>
+                <td><strong>COS121</strong></td>
+                <td>Introduction to Problem Solving</td>
+                <td>3</td>
+                <td>C</td>
+                <td></td> 
+            </tr>
+            <tr>
+                 <td>2</td>
+                <td><strong>GST121</strong></td>
+                <td>Nigerian People And Culture</td>
+                <td>2</td>
+                <td>C</td>
+                <td></td>
+            </tr>
+            <tr>
+                 <td>3</td>
+                <td><strong>MTH121</strong></td>
+                <td>Elementary Mathematics II</td>
+                <td>2</td>
+                <td>C</td>
+                <td></td>
+            </tr>
+            <tr>
+                 <td>4</td>
+                <td><strong>PHY121</strong></td>
+                <td>General Physics II</td>
+                <td>2</td>
+                <td>C</td>
+                <td></td>
+            </tr>
+            <tr>
+                 <td>5</td>
+                <td><strong>PHY128</strong></td>
+                <td>General Practical Physics II</td>
+                <td>1</td>
+                <td>C</td>
+                <td></td>
+            </tr>
+            <tr>
+                 <td>6</td>
+                <td><strong>UUY-CSC121</strong></td>
+                <td>Introduction to web programming</td>
+                <td>3</td>
+                <td>C</td>
+                <td></td>
+            </tr>
+            <tr>
+                 <td>7</td>
+                <td><strong>UUY-CSC122</strong></td>
+                <td>Introduction To Information And Communications Technology</td>
+                <td>2</td>
+                <td>C</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td colspan="3" class="fs-7"><strong>*Key: C</strong>-Core Courses, <strong>E</strong>-Elective Courses | <strong>TOTAL CREDIT UNITS Registered:</strong></td>
+                <td>15</td>
+                <td>*</td>
+                <td></td>
+            </tr>
+        </table>
+    </section>
+    <h4 class="head"><strong>Date Registered, Monday 26th of May 2025 10:31:42AM</strong></h4>
+    <section class="third class">
+        <table border="1">
+        <tr>
+            <th><strong>EXAM OFFICER'S SIGN/DATE</strong></th>
+            <th><strong>HOD'S SIGN/DATE</strong></th>
+            <th><strong>FACULTY OFICER'S SIGN/DATE</strong></th>
         </tr>
         <tr>
-            <td><strong>Matric Number:</strong></td>
-            <td colspan="2">24/SC/CO/310</td>
-        </tr>
-        <tr>
-            <td><strong>Full Name:</strong></td>
-            <td colspan="2">Essien, Deborah Eshiet</td>
-        </tr>
-        <tr>
-            <td><strong>Faculty:</strong></td>
-            <td colspan="2">Computing</td>
-        </tr>
-        <tr>
-            <td><strong>Department:</strong></td>
-            <td colspan="2">Computer Science</td>
-        </tr>
-        <tr>
-            <td><strong>Programme:</strong></td>
-            <td colspan="2">B.Sc Computer Science</td>
-        </tr>
-        <tr>
-            <td><strong>ModeOfEntry/Session/Semester:</strong></td>
-            <td colspan="3">UTME/2024/2025 - Second Semester</td>
+            <td>.</td>
+            <td></td>
+            <td></td>
         </tr>
     </table>
-    <br>
-
-    <!-- Course Header -->
-    <h3>2024/2025 COURSE CLEARANCE FORM - CURRENT LEVEL: 100L</h3>
-
-    <!-- Courses Table -->
-    <table border="1" cellpadding="5" cellspacing="0" width="100%">
-        <tr>
-            <td colspan="6" align="center">
-                <strong>FAILED/OUTSTANDING COURSES IN FIRST SEMESTER OF PREVIOUS SESSIONS</strong>
-            </td>
-        </tr>
-        <tr>
-            <td colspan="6" align="center"><strong>NO FAILED/OUTSTANDING COURSES</strong></td>
-        </tr>
-        <tr>
-            <td colspan="6" align="center"><strong>CURRENT COURSES FOR THE SEMESTER, 2024/2025 SESSION - LEVEL: 100</strong></td>
-        </tr>
-        <tr>
-            <th>#</th>
-            <th>CourseCode</th>
-            <th>CourseTitle</th>
-            <th>CH</th>
-            <th>Descr</th>
-            <th>Remarks</th>
-        </tr>
-        <tr>
-            <td>1</td>
-            <td>COS121</td>
-            <td>Problem Solving</td>
-            <td>3</td>
-            <td>C</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>2</td>
-            <td>GST121</td>
-            <td>Nigerian Peoples and Culture</td>
-            <td>3</td>
-            <td>C</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>3</td>
-            <td>MTH121</td>
-            <td>General Mathematics II</td>
-            <td>2</td>
-            <td>C</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>4</td>
-            <td>PHY121</td>
-            <td>General Physics II</td>
-            <td>2</td>
-            <td>C</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>5</td>
-            <td>PHY128</td>
-            <td>General Physics Practical II</td>
-            <td>1</td>
-            <td>C</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>6</td>
-            <td>UUY-CSC121</td>
-            <td>Introduction To Web Programming</td>
-            <td>2</td>
-            <td>C</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td>7</td>
-            <td>UUY-CSC122</td>
-            <td>Introduction To Information And Communications Technology</td>
-            <td>2</td>
-            <td>C</td>
-            <td></td>
-        </tr>
-        <tr>
-            <td colspan="5"><strong>This is NOT COURSE REGISTRATION FORM | GPA: N/A - CGPA: N/A | CH:</strong></td>
-            <td><strong>18</strong><br><small>* C-Core | E-Elective</small></td>
-        </tr>
-    </table>
-    <br>
-
-    <!-- Electives Info -->
-    <table border="1" cellpadding="5" cellspacing="0" width="100%">
-        <tr>
-            <td>Electives Offered: <strong>NONE</strong> | NOT Offered: <strong>NONE</strong></td>
-        </tr>
-    </table>
-    <br><br>
-
-    <!-- Signatures -->
-    <table border="1" cellpadding="10" cellspacing="0" width="100%">
-        <tr>
-            <td><strong>Student's Signature:</strong> </td>
-            <td><strong>Examination Officer's Signature:</strong></td>
-        </tr>
-    </table>
-    <br><br>
-
-    <!-- Footer -->
+    </section>
+    <div class="word">
+        <p><strong>Please Note:</strong>This Course Registration Form <strong>MUST</strong> be printed in quadruplicate, pay the neccessary dues and obtain the required signatures and stamps in the places indicated above before submitting the form to the faculty officer, Registration must be completed<strong>TWO WEEKS</strong>after resumption.</p>
+    </div>
+    <hr class="foot-1">
     <footer>
-        <p><b>&copy; 2025 UNIUYO &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Printed on: 26-02-2025 03:54:18</b></p>
+         <p><strong>This document is subjected to verification by the university</strong></p>
     </footer>
-
+    <div class="watermark">eCourse Registration Form </div>
 </body>
-</html>
+                        </html>
